Arreglado el problema de rutas y agregado un nuevo modulo

--- a/src/app/Components/layout/layout.component.html
+++ b/src/app/Components/layout/layout.component.html
@@ -1,1 +1,23 @@
-<p>layout works!</p>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <h1>Sistema Venta</h1>
+  
+      <button mat-icon-button style="background-color: transparent;" (click)="sidenav.toggle();">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav opened="true" mode="side" style="width: 200px;">
+      <mat-nav-list>
+  <mat-icon mat-list-icon>dashboard</mat-icon>
+       <div mat-line>Dashboard</div>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <div style="height: 90vh;">
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+  
