Corregido el error de ventas

--- a/src/app/Components/layout/layout.component.html
+++ b/src/app/Components/layout/layout.component.html
@@ -32,7 +32,7 @@
             <div mat-line>Productos</div>
           </mat-list-item>
   
-          <mat-list-item  routerLink="/pages/venta">
+          <mat-list-item  routerLink="/pages/ventas">
             <mat-icon mat-list-icon>currency_exchange</mat-icon>
             <div mat-line>Venta</div>
           </mat-list-item>
