--- a/src/app/Components/layout/layout.component.html
+++ b/src/app/Components/layout/layout.component.html
@@ -1,61 +1,50 @@
 <mat-toolbar color="primary">
-
   <mat-toolbar-row>
     <h1>Sistema Venta</h1>
-  
     <button mat-icon-button (click)="sidenav.toggle();">
       <mat-icon>menu</mat-icon>
     </button>
-  
   </mat-toolbar-row>
-  
-  </mat-toolbar>
-  
-  <mat-sidenav-container>
-  
-    <mat-sidenav #sidenav opened="true" mode="side" style="width:200px;">
-  
-      <mat-nav-list>
-  
-          <mat-list-item  routerLink="/pages/dashboard">
-            <mat-icon mat-list-icon>dashboard</mat-icon>
-            <div mat-line>DashBoard</div>
-          </mat-list-item>
-  
-          <mat-list-item  routerLink="/pages/usuarios">
-            <mat-icon mat-list-icon>group</mat-icon>
-            <div mat-line>Usuarios</div>
-          </mat-list-item>
-  
-          <mat-list-item  routerLink="/pages/productos">
-            <mat-icon mat-list-icon>collections_bookmark</mat-icon>
-            <div mat-line>Productos</div>
-          </mat-list-item>
-  
-          <mat-list-item  routerLink="/pages/ventas">
-            <mat-icon mat-list-icon>currency_exchange</mat-icon>
-            <div mat-line>Venta</div>
-          </mat-list-item>
-  
-          <mat-list-item  routerLink="/pages/historial_venta">
-            <mat-icon mat-list-icon>edit_note</mat-icon>
-            <div mat-line>Historial Ventas</div>
-          </mat-list-item>
-  
-  
-          <mat-list-item  routerLink="/pages/reportes">
-            <mat-icon mat-list-icon>receipt</mat-icon>
-            <div mat-line>Reportes</div>
-          </mat-list-item>
-  
-      </mat-nav-list>
-  
-    </mat-sidenav>
-  
-    <mat-sidenav-content>
-      <div style="height: 90vh;">
-          <router-outlet></router-outlet>
-      </div>
-    </mat-sidenav-content>
-  
-  </mat-sidenav-container>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav opened="true" mode="side" style="width:200px;">
+    <mat-nav-list>
+      <a mat-list-item routerLink="/pages/dashboard">
+        <mat-icon mat-list-icon>dashboard</mat-icon>
+        <span style="margin-left: 16px;">DashBoard</span>
+      </a>
+
+      <a mat-list-item routerLink="/pages/usuarios">
+        <mat-icon mat-list-icon>group</mat-icon>
+        <span style="margin-left: 16px;">Usuarios</span>
+      </a>
+
+      <a mat-list-item routerLink="/pages/productos">
+        <mat-icon mat-list-icon>collections_bookmark</mat-icon>
+        <span style="margin-left: 16px;">Productos</span>
+      </a>
+
+      <a mat-list-item routerLink="/pages/ventas">
+        <mat-icon mat-list-icon>currency_exchange</mat-icon>
+        <span style="margin-left: 16px;">Venta</span>
+      </a>
+
+      <a mat-list-item routerLink="/pages/historial_venta">
+        <mat-icon mat-list-icon>edit_note</mat-icon>
+        <span style="margin-left: 16px;">Historial Ventas</span>
+      </a>
+
+      <a mat-list-item routerLink="/pages/reportes">
+        <mat-icon mat-list-icon>receipt</mat-icon>
+        <span style="margin-left: 16px;">Reportes</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <div style="height: 90vh;">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
