--- a/src/app/Components/layout/Pages/usuario/usuario.component.html
+++ b/src/app/Components/layout/Pages/usuario/usuario.component.html
@@ -1,1 +1,70 @@
-<p>usuario works!</p>
+<h1 style="margin: 20px 0px 20px 0px">Usuarios</h1>
+<mat-card style="margin: 0px 40px 40px 40px">
+  <mat-card-title>
+    <button mat-raised-button color="primary" (click)="nuevoUsuario()">
+      <mat-icon>add</mat-icon> Nuevo Usuario
+    </button>
+  </mat-card-title>
+
+  <mat-divider></mat-divider>
+  <mat-card-content class="dashboard-card-content">
+    <mat-form-field appearance="outline" style="width: 300px; margin-top: 10px">
+      <mat-label>Buscar</mat-label>
+      <input matInput (keyup)="aplicarFiltroTabla($event)" #input />
+    </mat-form-field>
+
+    <div class="mat-elevation-z2">
+      <table mat-table [dataSource]="dataListaUsuarios">
+        <ng-container matColumnDef="nombreCompleto">
+          <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.nombreCompleto }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="correo">
+            <th mat-header-cell *matHeaderCellDef>Correo</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.correo }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="rolDescripcion">
+            <th mat-header-cell *matHeaderCellDef>Rol</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.rolDescripcion }}
+            </td>
+          </ng-container>
+
+
+          <ng-container matColumnDef="estado">
+            <th mat-header-cell *matHeaderCellDef>Estado</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.esActivo==1?'Activo':'No Activo' }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef style="width: 80px;"></th>
+            <td mat-cell *matCellDef="let element">
+
+                <button mat-icon-button color="primary" (click)="editarUsuario(element)">
+                    <mat-icon >edit</mat-icon>
+                  </button>
+                  <button mat-icon-button color="warm" (click)="eliminarUsuario(element)">
+                    <mat-icon>add</mat-icon> Nuevo Usuario
+                  </button>  
+            </td>
+          </ng-container>
+<tr mat-header-row *matHeaderRowDef="columnasTabla"></tr>
+<tr mat-row *matRowDef="let row; columns:columnasTabla"></tr>
+
+<tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No hay datos con el filtro "{{input.value}}"</td>
+</tr>
+      </table>
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+    </div>
+  </mat-card-content>
+</mat-card>
