--- a/src/app/Components/layout/Pages/usuario/usuario.component.html
+++ b/src/app/Components/layout/Pages/usuario/usuario.component.html
@@ -45,15 +45,16 @@
           </ng-container>
 
           <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef style="width: 80px;"></th>
+            <th mat-header-cell *matHeaderCellDef style="width: 80px;">Acciones</th>
             <td mat-cell *matCellDef="let element">
-
+              <div style="display: flex; justify-content: space-around;">
                 <button mat-icon-button color="primary" (click)="editarUsuario(element)">
-                    <mat-icon >edit</mat-icon>
-                  </button>
-                  <button mat-icon-button color="warm" (click)="eliminarUsuario(element)">
-                    <mat-icon>add</mat-icon> Nuevo Usuario
-                  </button>  
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="eliminarUsuario(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>  
+              </div>
             </td>
           </ng-container>
 <tr mat-header-row *matHeaderRowDef="columnasTabla"></tr>
