--- a/src/app/Components/layout/Pages/producto/producto.component.html
+++ b/src/app/Components/layout/Pages/producto/producto.component.html
@@ -1,1 +1,77 @@
-<p>producto works!</p>
+<h1 style="margin: 20px 0px 20px 0px">Productos</h1>
+<mat-card style="margin: 0px 40px 40px 40px">
+  <mat-card-title>
+    <button mat-raised-button color="primary" (click)="nuevoProducto()">
+      <mat-icon>add</mat-icon> Nuevo Producto
+    </button>
+  </mat-card-title>
+
+  <mat-divider></mat-divider>
+  <mat-card-content class="dashboard-card-content">
+    <mat-form-field appearance="outline" style="width: 300px; margin-top: 10px">
+      <mat-label>Buscar</mat-label>
+      <input matInput (keyup)="aplicarFiltroTabla($event)" #input />
+    </mat-form-field>
+
+    <div class="mat-elevation-z2">
+      <table mat-table [dataSource]="dataListaProductos">
+        <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef>Nombre</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.nombre }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="categoria">
+            <th mat-header-cell *matHeaderCellDef>Categoria</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.categoria }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="stock">
+            <th mat-header-cell *matHeaderCellDef>Stock</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.stock }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="precio">
+            <th mat-header-cell *matHeaderCellDef>Precio</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.precio }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="estado">
+            <th mat-header-cell *matHeaderCellDef>Estado</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.esActivo==1?'Activo':'No Activo' }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef style="width: 80px;">Acciones</th>
+            <td mat-cell *matCellDef="let element">
+              <div style="display: flex; justify-content: space-around;">
+                <button mat-icon-button color="primary" (click)="editarProducto(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="eliminarProducto(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>  
+              </div>
+            </td>
+          </ng-container>
+<tr mat-header-row *matHeaderRowDef="columnasTabla"></tr>
+<tr mat-row *matRowDef="let row; columns:columnasTabla"></tr>
+
+<tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No hay datos con el filtro "{{input.value}}"</td>
+</tr>
+      </table>
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+    </div>
+  </mat-card-content>
+</mat-card>
