--- a/src/app/Components/layout/Pages/dashboard/dashboard.component.html
+++ b/src/app/Components/layout/Pages/dashboard/dashboard.component.html
@@ -1,1 +1,61 @@
-<p>dashboard works!</p>
+<h1 style="margin: 20px 0px 20px 0px">Dashboard resumen última semana</h1>
+<mat-card style="margin: 0px 40px 40px 40px">
+    <mat-card-content>
+        <mat-grid-list cols="3" rowHeight="100px">
+            <mat-grid-tile>
+                <mat-card class="cars-info">
+                    <mat-card-header>
+                        <div matCardAvatar>
+                            <mat-icon color="accent">payments</mat-icon>
+                        </div>
+                        <mat-card-title>Total ingresos</mat-card-title>
+                        <mat-card-subtitle>${{totalIngresos}}
+
+                        </mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+            </mat-grid-tile>
+
+            <mat-grid-tile>
+                <mat-card class="cars-info">
+                    <mat-card-header>
+                        <div matCardAvatar>
+                            <mat-icon color="warn">sell</mat-icon>
+                        </div>
+                        <mat-card-title>Total Ventas</mat-card-title>
+                        <mat-card-subtitle>${{totalVentas}}
+                            
+                        </mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+            </mat-grid-tile>
+
+            <mat-grid-tile>
+                <mat-card class="cars-info">
+                    <mat-card-header>
+                        <div matCardAvatar>
+                            <mat-icon color="primary">collections_bookmark</mat-icon>
+                        </div>
+                        <mat-card-title>Total Productos</mat-card-title>
+                        <mat-card-subtitle>{{totalProductos}}
+                            
+                        </mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+            </mat-grid-tile>
+
+        </mat-grid-list>
+
+        <mat-card style="margin-top: 15px;">
+<mat-card-content>
+    <div style="width: 100%; height: 400px;">
+        <canvas id="graficoBarras">
+
+        </canvas>
+
+    </div>
+</mat-card-content>
+        </mat-card>
+
+    </mat-card-content>
+</mat-card>
