desarrollo del formulario Login v1

--- a/src/app/Components/layout/layout.component.html
+++ b/src/app/Components/layout/layout.component.html
@@ -4,6 +4,12 @@
     <button mat-icon-button (click)="sidenav.toggle();">
       <mat-icon>menu</mat-icon>
     </button>
+
+    <span style="flex: 1 1 auto;"></span>
+    <label style="font-size: 14px; margin-right: 20px;">
+      {{correoUsuario}}|{{rolUsuario}}
+    </label>
+
   </mat-toolbar-row>
 </mat-toolbar>
 
